# terminal-fps

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  README.md  deno.json  odinfmt.json  ols.json  package-lock.json  package.json  taskfile.yaml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/actions/setup-odin/: README.md  action.yaml  package-lock.json  package.json
.github/actions/setup-odin/src/: .eslintrc.js  index.ts
.github/workflows/: build.yaml  lint.yaml  pull_request.yaml  push.yaml  release.yaml  test.yaml
include/graphics/: color.hpp  framebuffer.hpp  pixel.hpp  texture.hpp
src/: game_map.odin  graphics.rs  main.cpp  main.odin  main.rs  registry.odin
src/graphics/: color.cpp  framebuffer.cpp  pixel.cpp  texture.cpp
terminal-fps/: Cargo.toml
tests/: test_registry.odin  tests.odin
tests/utils/: expects.odin
