[package]
name = "terminal-fps"
description = "A simple first-person shooter that runs in your terminal."
version = "0.0.0"
license-file = "LICENSE.md"
publish = false
edition = "2021"
authors = ["G'lek Tarssza <glek@glektarssza.com>"]
readme = "README.md"
homepage = "https://github.com/glektarssza/terminal-fps"
repository = "https://github.com/glektarssza/terminal-fps"
categories = ["games", "command-line-utilities"]
keywords = [
    "terminal",
    "ray",
    "casting",
    "game",
    "first-person",
    "shooter",
    "fps",
    "text-based",
]
